# gst-droid

./: configure.ac
debian/: changelog  control  copyright  gstreamer1.0-droid.config  gstreamer1.0-droid.install  gstreamer1.0-droid.postinst  gstreamer1.0-droid.templates  rules  watch
gst/: Makefile.am  plugin.c
gst/gtkdroideglsink/: Makefile.am  gstgtkdroideglsink.c  gstgtkdroideglsink.h
